[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["sungrauzis <kristers.krums@grobinasskola.lv>"]
description = ""
name = "chillguy"
version = "0.1.0"
[tool.poetry.dependencies]
pyproject = "^1.3"
python = "^3.7"
requirements-validator = "^2019.4"
flask = "^1.1"
[tool.poetry.dev-dependencies]
